haskell-debian (3.69.4) unstable; urgency=low

  * Add prettyOrRelation and prettyRelations to Debian.Relation.

 -- David Fox <dsf@seereason.com>  Thu, 27 Dec 2012 05:50:56 -0800

haskell-debian (3.69.3) unstable; urgency=low

  * Add a missing newline in the generated log entry comments.

 -- David Fox <dsf@seereason.com>  Wed, 26 Dec 2012 16:42:41 -0800

haskell-debian (3.69.2) unstable; urgency=low

  * Fix formatting of pretty printed changelog entries - There were two
    newlines before the signature and none after, there should be one and
    one.

 -- David Fox <dsf@seereason.com>  Wed, 26 Dec 2012 16:05:49 -0800

haskell-debian (3.69.1) unstable; urgency=low

  * Fix the darcs repo path.

 -- David Fox <dsf@seereason.com>  Mon, 19 Nov 2012 16:35:37 -0800

haskell-debian (3.69) unstable; urgency=low

  * Fix changelog formatting by adding a newtype named ChangeLog with
    a Pretty instance.
  * Rename parseLog -> parseEntries, add a parseChangeLog function.

 -- David Fox <dsf@seereason.com>  Mon, 19 Nov 2012 11:10:37 -0800

haskell-debian (3.68) unstable; urgency=low

  * Fix the formatting of changelog entries (an extra newline was being
    appended) and replace the functions prettyChanges, prettyChangesFile,
    and prettyEntry with instances of Pretty.

 -- David Fox <dsf@seereason.com>  Sun, 18 Nov 2012 07:04:28 -0800

haskell-debian (3.67) unstable; urgency=low

  * Eliminate the PkgName type, instead make BinPkgName and SrcPkgName
    instances of a class named PkgName.

 -- David Fox <dsf@seereason.com>  Sat, 17 Nov 2012 06:11:06 -0800

haskell-debian (3.66) unstable; urgency=low

  * Eliminate the use of the tiny pretty-class package, use the Pretty
    class from ansi-wl-pprint instead.
  * Improve the pretty printing of control files in terms of terminating
    newlines and the newlines between paragraphs.
  * Add some control file unit tests.

 -- David Fox <dsf@seereason.com>  Sun, 11 Nov 2012 08:21:07 -0800
